--- a/NativeSpark/src/main/resources/templates/account.html
+++ b/NativeSpark/src/main/resources/templates/account.html
@@ -25,12 +25,11 @@
         }
 
         .footer-custom {
-            background-color: rgba(1, 25, 13, 0.9);
+            background-color: #014017;
             color: white;
-            width: 100%;
-            padding: 1rem 0;
-            border-top: 2px solid #014017;
-            font-size: 0.9rem;
+            padding: 20px 0;
+            text-align: center;
+            font-size: 1rem;
         }
 
         .content {
@@ -87,10 +86,22 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
+
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" th:href="@{/about}">About Us</a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/}">Home</a></li>
                 <li class="nav-item" sec:authorize="isAuthenticated()"><a class="nav-link" th:href="@{/account}">My Account</a></li>
+
+                <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
+                    <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Services
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
+                        <li><a class="dropdown-item" th:href="@{/subscription}">Subscription</a></li>
+                        <li><a class="dropdown-item" href="#">Coming Soon...</a></li> <!-- Placeholder for future features -->
+                    </ul>
+                </li>
+
                 <li class="nav-item" sec:authorize="!isAuthenticated()"><a class="nav-link" th:href="@{/login}">Login</a></li>
                 <li class="nav-item" sec:authorize="isAuthenticated()"><a class="nav-link" th:href="@{/logout}">Logout</a></li>
             </ul>
@@ -126,6 +137,11 @@
                 <img th:src="@{'/' + ${basic.photoPath}}" class="profile-pic" alt="Profile Picture">
                 <h4 th:text="${basic.firstName + ' ' + basic.lastName}"></h4>
                 <p><strong>About:</strong> <span th:text="${basic.about}"></span></p>
+            </div>
+
+            <!-- Display Subscription -->
+            <div th:if="${subscription != null}">
+                <p><strong>Subscription:</strong> <span th:text="${subscription.subscriptionType}"></span></p>
             </div>
 
             <div class="text-center">
