--- a/NativeSpark/src/main/resources/templates/subscription.html
+++ b/NativeSpark/src/main/resources/templates/subscription.html
@@ -32,6 +32,7 @@
             padding: 20px 0;
             text-align: center;
             font-size: 1rem;
+            margin-top: 20px;
         }
         .subscription-box {
             background-color: #fff;
@@ -56,6 +57,28 @@
         .hidden {
             display: none;
         }
+
+        html, body {
+            height: 100%;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .content {
+            flex: 1;
+        }
+
+        .footer-custom {
+            background-color: #014017;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+            font-size: 1rem;
+            position: relative;
+            width: 100%;
+        }
+
     </style>
 </head>
 <body>
@@ -139,6 +162,10 @@
 
                     <button type="submit" class="btn btn-success mt-3">Save Subscription</button>
                 </form>
+                <!-- Back to Account Page Button -->
+                <div class="mt-3">
+                    <a href="/account" class="btn btn-secondary">Back to Account Page</a>
+                </div>
             </div>
         </div>
     </div>
