--- a/NativeSpark/src/main/resources/templates/welcome.html
+++ b/NativeSpark/src/main/resources/templates/welcome.html
@@ -92,6 +92,7 @@
             padding: 20px 0;
             text-align: center;
             font-size: 1rem;
+            margin-top: 20px;
         }
 
         /* Buttons */
