--- a/NativeSpark/src/main/resources/templates/welcome.html
+++ b/NativeSpark/src/main/resources/templates/welcome.html
@@ -119,13 +119,6 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-<!--            <ul class="navbar-nav ms-auto">-->
-<!--                <li class="nav-item"><a class="nav-link" th:href="@{/about}">About Us</a></li>-->
-<!--                <li class="nav-item"><a class="nav-link" th:href="@{/}">Home</a></li>-->
-<!--                <li class="nav-item" sec:authorize="isAuthenticated()"><a class="nav-link" th:href="@{/account}">My Account</a></li>-->
-<!--                <li class="nav-item" sec:authorize="!isAuthenticated()"><a class="nav-link" th:href="@{/login}">Login</a></li>-->
-<!--                <li class="nav-item" sec:authorize="isAuthenticated()"><a class="nav-link" th:href="@{/logout}">Logout</a></li>-->
-<!--            </ul>-->
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" th:href="@{/about}">About Us</a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/}">Home</a></li>
@@ -138,6 +131,12 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
                         <li><a class="dropdown-item" th:href="@{/subscription}">Subscription</a></li>
+                        <li><a class="dropdown-item" th:href="@{/my_orders}">My Orders</a></li>
+<!--                        <li><a class="dropdown-item" th:href="@{/my_postings}">My Postings</a></li>-->
+                        <!-- ✅ Show "My Postings" only for Business and Entrepreneur users -->
+                        <li th:if="${#authentication.authorities.?[authority == 'ROLE_BUSINESS' or authority == 'ROLE_ENTREPRENEUR'].size() > 0}">
+                            <a class="dropdown-item" th:href="@{/my_postings}">My Postings</a>
+                        </li>
                         <li><a class="dropdown-item" href="#">Coming Soon...</a></li> <!-- Placeholder for future features -->
                     </ul>
                 </li>
